# SPDX-FileCopyrightText: 2023 OPAL-RT Germany GmbH
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'villas-python'
version = '0.10.3'
description = 'Python support for the VILLASnode simulation-data gateway'
readme = 'README.md'
requires-python = '>=3.10'
keywords = ['simulation', 'power', 'system', 'real-time', 'villas']
license.text = 'Apache-2.0'
classifiers = [
    'Development Status :: 4 - Beta',
    'Topic :: Scientific/Engineering',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
]
dependencies = ['linuxfd', 'requests']
optional-dependencies.dev = [
    'black',
    'flake8',
    'mypy',
    'pytest',
    'types-requests',
]

[project.urls]
GitHub = 'https://github.com/VILLASframework/node'
Project = 'https://www.fein-aachen.org/en/projects/villas-node'
Homepage = 'https://villas.fein-aachen.org'

[[project.authors]]
name = 'Steffen Vogel'
email = 'post@steffenvogel.de'

[[project.authors]]
name = 'Philipp Jungkamp'
email = 'Philipp.Jungkamp@opal-rt.com'
