# SPDX-FileCopyrightText: 2023 OPAL-RT Germany GmbH
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'villas-node'
version = '0.11.1'
description = 'Python support for the VILLASnode simulation-data gateway'
readme = 'README.md'
requires-python = '>=3.10'
keywords = ['simulation', 'power', 'system', 'real-time', 'villas']
license = 'Apache-2.0'
classifiers = [
    'Development Status :: 4 - Beta',
    'Topic :: Scientific/Engineering',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
]
dependencies = [
    'linuxfd==1.5; platform_system=="Linux"',
    'requests==2.31.0',
    'protobuf==4.24.4',
]
optional-dependencies.dev = [
    'black==24.2.0',
    'flake8==7.0.0',
    'mypy==1.8.0',
    'pytest==8.0.0',
    'types-requests==2.31.0.20240125',
    'types-protobuf==4.24.0.20240311',
]

[project.urls]
GitHub = 'https://github.com/VILLASframework/node'
Project = 'https://www.fein-aachen.org/en/projects/villas-node'
Homepage = 'https://villas.fein-aachen.org'

[[project.authors]]
name = 'Steffen Vogel'
email = 'post@steffenvogel.de'

[[project.authors]]
name = 'Philipp Jungkamp'
email = 'Philipp.Jungkamp@opal-rt.com'

[[tool.mypy.overrides]]
module = ['google']
ignore_missing_imports = true

[tool.black]
extend-exclude = '''.*(\.pyi|_pb2.py)$'''

[tool.setuptools.packages.find]
include = ["villas.node"]