# SPDX-FileCopyrightText: 2023 OPAL-RT Germany GmbH
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'villas-node'
version = '1.0.1'
description = 'Python support for the VILLASnode simulation-data gateway'
readme = 'README.md'
requires-python = '>=3.10'
keywords = ['simulation', 'power', 'system', 'real-time', 'villas']
# license = 'Apache-2.0'
classifiers = [
    'Development Status :: 4 - Beta',
    'Topic :: Scientific/Engineering',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
]
dependencies = [
    'linuxfd==1.5; platform_system=="Linux"',
    'protobuf==6.31.1',
    'libconf==2.0.1',
]
optional-dependencies.dev = [
    'black==25.1.0',
    'flake8==7.2.0',
    'mypy==1.15.0',
    'pytest==8.3.5',
    'types-protobuf==5.29.1.20250403',
]

[project.scripts]
villas-conf2orchestra-ddf = "villas.node.opal_orchestra_ddf:main"

[project.urls]
GitHub = 'https://github.com/VILLASframework/node'
Project = 'https://www.fein-aachen.org/en/projects/villas-node'
Homepage = 'https://villas.fein-aachen.org'

[[project.authors]]
name = 'Steffen Vogel'
email = 'post@steffenvogel.de'

[[project.authors]]
name = 'Philipp Jungkamp'
email = 'Philipp.Jungkamp@opal-rt.com'

[[tool.mypy.overrides]]
module = ['google']
ignore_missing_imports = true

[tool.black]
extend-exclude = '''.*(\.pyi|_pb2.py)$'''
line-length = 90

[tool.setuptools.packages.find]
include = ["villas.node"]
